// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGrader defaults current page to 0 if userID is not in submissions 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="In Progress"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader defaults current page to 0 without studentIndex 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="In Progress"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader only sets submissions once 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      data={
        Array [
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
        ]
      }
      disableVirtualization={false}
      getItemLayout={[Function]}
      horizontal={true}
      initialNumToRender={null}
      initialScrollIndex={0}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="handled"
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      pagingEnabled={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": -10,
        }
      }
      updateCellsBatchingPeriod={50}
      windowSize={5}
    />
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader renders 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      accessibilityLabel="In Progress"
      accessible={true}
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader renders submissions if there are some 1`] = `
<View
  style={
    Array [
      Object {
        "overflow": "hidden",
        "paddingLeft": 10,
        "paddingRight": 10,
      },
      Object {
        "height": 1334,
        "width": 770,
      },
    ]
  }
>
  <SubmissionGrader
    assignmentID="1"
    assignmentSubmissionTypes={
      Array [
        "none",
      ]
    }
    closeModal={[Function]}
    courseID="1"
    drawerInset={62}
    drawerState={
      DrawerState {
        "commentProgress": Object {},
        "currentSnap": 0,
        "deltaY": 0,
        "dragBegan": [Function],
        "drawerDidSnap": [Function],
        "drawers": Array [
          SpeedGrader {
            "_captureFlatList": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": false,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": true,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": undefined,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={true}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={Array []}
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": undefined,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <View
                                          accessibilityLabel="In Progress"
                                          accessible={true}
                                          style={
                                                      Object {
                                                                  "alignItems": "center",
                                                                  "flex": 1,
                                                                  "justifyContent": "center",
                                                                }
                                          }
                              >
                                          <ActivityIndicator
                                                      animating={true}
                                                      color="#999999"
                                                      hidesWhenStopped={true}
                                                      size="small"
                                          />
                              </View>
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": true,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "filter": [Function],
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": false,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "missing",
                  "userID": "55",
                },
              ],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": 0,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "missing",
                  "userID": "55",
                },
              ],
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  filter={[Function]}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={false}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={
                              Array [
                                          Object {
                                            "avatarURL": "http://www.fillmurray.com/100/100",
                                            "grade": "B-",
                                            "name": "Donald Trump",
                                            "sectionID": "1",
                                            "status": "submitted",
                                            "userID": "55",
                                          },
                                          Object {
                                            "avatarURL": "http://www.fillmurray.com/100/100",
                                            "grade": "B-",
                                            "name": "Donald Trump",
                                            "sectionID": "1",
                                            "status": "missing",
                                            "userID": "55",
                                          },
                                        ]
                  }
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": 0,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                  "submissions": Array [
                    Object {
                      "avatarURL": "http://www.fillmurray.com/100/100",
                      "grade": "B-",
                      "name": "Donald Trump",
                      "sectionID": "1",
                      "status": "missing",
                      "userID": "55",
                    },
                  ],
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <FlatList
                                          data={
                                                      Array [
                                                                  Object {
                                                                    "key": "55",
                                                                    "submission": Object {
                                                                      "avatarURL": "http://www.fillmurray.com/100/100",
                                                                      "grade": "B-",
                                                                      "name": "Donald Trump",
                                                                      "sectionID": "1",
                                                                      "status": "missing",
                                                                      "userID": "55",
                                                                    },
                                                                  },
                                                                ]
                                          }
                                          disableVirtualization={false}
                                          getItemLayout={[Function]}
                                          horizontal={true}
                                          initialNumToRender={null}
                                          initialScrollIndex={0}
                                          keyExtractor={[Function]}
                                          keyboardShouldPersistTaps="handled"
                                          maxToRenderPerBatch={10}
                                          numColumns={1}
                                          onEndReachedThreshold={2}
                                          onLayout={[Function]}
                                          onMomentumScrollEnd={[Function]}
                                          pagingEnabled={true}
                                          renderItem={[Function]}
                                          scrollEventThrottle={50}
                                          showsHorizontalScrollIndicator={false}
                                          style={
                                                      Object {
                                                                  "marginLeft": -10,
                                                                  "marginRight": -10,
                                                                }
                                          }
                                          updateCellsBatchingPeriod={50}
                                          windowSize={5}
                              />
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "componentWillReceiveProps": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": true,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": false,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": 0,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={false}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={
                              Array [
                                          Object {
                                            "avatarURL": "http://www.fillmurray.com/100/100",
                                            "grade": "B-",
                                            "name": "Donald Trump",
                                            "sectionID": "1",
                                            "status": "submitted",
                                            "userID": "55",
                                          },
                                        ]
                  }
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": 0,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                  "submissions": Array [
                    Object {
                      "avatarURL": "http://www.fillmurray.com/100/100",
                      "grade": "B-",
                      "name": "Donald Trump",
                      "sectionID": "1",
                      "status": "submitted",
                      "userID": "55",
                    },
                  ],
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <FlatList
                                          data={
                                                      Array [
                                                                  Object {
                                                                    "key": "55",
                                                                    "submission": Object {
                                                                      "avatarURL": "http://www.fillmurray.com/100/100",
                                                                      "grade": "B-",
                                                                      "name": "Donald Trump",
                                                                      "sectionID": "1",
                                                                      "status": "submitted",
                                                                      "userID": "55",
                                                                    },
                                                                  },
                                                                ]
                                          }
                                          disableVirtualization={false}
                                          getItemLayout={[Function]}
                                          horizontal={true}
                                          initialNumToRender={null}
                                          initialScrollIndex={0}
                                          keyExtractor={[Function]}
                                          keyboardShouldPersistTaps="handled"
                                          maxToRenderPerBatch={10}
                                          numColumns={1}
                                          onEndReachedThreshold={2}
                                          onLayout={[Function]}
                                          onMomentumScrollEnd={[Function]}
                                          pagingEnabled={true}
                                          renderItem={[Function]}
                                          scrollEventThrottle={50}
                                          showsHorizontalScrollIndicator={false}
                                          style={
                                                      Object {
                                                                  "marginLeft": -10,
                                                                  "marginRight": -10,
                                                                }
                                          }
                                          updateCellsBatchingPeriod={50}
                                          windowSize={5}
                              />
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "componentWillReceiveProps": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": true,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": false,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": 0,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={false}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={
                              Array [
                                          Object {
                                            "avatarURL": "http://www.fillmurray.com/100/100",
                                            "grade": "B-",
                                            "name": "Donald Trump",
                                            "sectionID": "1",
                                            "status": "submitted",
                                            "userID": "55",
                                          },
                                        ]
                  }
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": 0,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                  "submissions": Array [
                    Object {
                      "avatarURL": "http://www.fillmurray.com/100/100",
                      "grade": "B-",
                      "name": "Donald Trump",
                      "sectionID": "1",
                      "status": "submitted",
                      "userID": "55",
                    },
                  ],
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <FlatList
                                          data={
                                                      Array [
                                                                  Object {
                                                                    "key": "55",
                                                                    "submission": Object {
                                                                      "avatarURL": "http://www.fillmurray.com/100/100",
                                                                      "grade": "B-",
                                                                      "name": "Donald Trump",
                                                                      "sectionID": "1",
                                                                      "status": "submitted",
                                                                      "userID": "55",
                                                                    },
                                                                  },
                                                                ]
                                          }
                                          disableVirtualization={false}
                                          getItemLayout={[Function]}
                                          horizontal={true}
                                          initialNumToRender={null}
                                          initialScrollIndex={0}
                                          keyExtractor={[Function]}
                                          keyboardShouldPersistTaps="handled"
                                          maxToRenderPerBatch={10}
                                          numColumns={1}
                                          onEndReachedThreshold={2}
                                          onLayout={[Function]}
                                          onMomentumScrollEnd={[Function]}
                                          pagingEnabled={true}
                                          renderItem={[Function]}
                                          scrollEventThrottle={50}
                                          showsHorizontalScrollIndicator={false}
                                          style={
                                                      Object {
                                                                  "marginLeft": -10,
                                                                  "marginRight": -10,
                                                                }
                                          }
                                          updateCellsBatchingPeriod={50}
                                          windowSize={5}
                              />
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": false,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": true,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": undefined,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={true}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={Array []}
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": undefined,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <View
                                          accessibilityLabel="In Progress"
                                          accessible={true}
                                          style={
                                                      Object {
                                                                  "alignItems": "center",
                                                                  "flex": 1,
                                                                  "justifyContent": "center",
                                                                }
                                          }
                              >
                                          <ActivityIndicator
                                                      animating={true}
                                                      color="#999999"
                                                      hidesWhenStopped={true}
                                                      size="small"
                                          />
                              </View>
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": false,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": true,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": undefined,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={true}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={Array []}
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": undefined,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <View
                                          accessibilityLabel="In Progress"
                                          accessible={true}
                                          style={
                                                      Object {
                                                                  "alignItems": "center",
                                                                  "flex": 1,
                                                                  "justifyContent": "center",
                                                                }
                                          }
                              >
                                          <ActivityIndicator
                                                      animating={true}
                                                      color="#999999"
                                                      hidesWhenStopped={true}
                                                      size="small"
                                          />
                              </View>
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
          SpeedGrader {
            "_captureFlatList": [Function],
            "context": Object {},
            "dismiss": [Function],
            "getInitialTabIndex": [Function],
            "getItemLayout": [Function],
            "hasRenderedBody": true,
            "onLayout": [Function],
            "props": Object {
              "assignmentID": "1",
              "assignmentSubmissionTypes": Array [
                "none",
              ],
              "courseID": "1",
              "drawerPosition": 0,
              "getCourseEnabledFeatures": [Function],
              "gradeSubmissionWithRubric": [Function],
              "navigator": Object {
                "dismiss": [Function],
                "dismissAllModals": [Function],
                "isModal": false,
                "pop": [Function],
                "show": [Function],
                "traitCollection": [Function],
              },
              "onDismiss": [Function],
              "pending": false,
              "refresh": [Function],
              "refreshSubmissionSummary": [Function],
              "refreshSubmissions": [Function],
              "refreshing": false,
              "resetDrawer": [Function],
              "submissionEntities": Object {},
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
              "userID": "1",
            },
            "refs": Object {},
            "renderBody": [Function],
            "renderItem": [Function],
            "scrollEnded": [Function],
            "snapTo": [Function],
            "state": Object {
              "currentPageIndex": 0,
              "currentStudentID": "1",
              "drawerInset": 62,
              "hasScrolledToInitialSubmission": false,
              "hasSetInitialDrawerPosition": false,
              "scrollEnabled": true,
              "size": Object {
                "height": 1334,
                "width": 770,
              },
              "submissions": Array [
                Object {
                  "avatarURL": "http://www.fillmurray.com/100/100",
                  "grade": "B-",
                  "name": "Donald Trump",
                  "sectionID": "1",
                  "status": "submitted",
                  "userID": "55",
                },
              ],
            },
            "updater": Updater {
              "_renderer": ReactShallowRenderer {
                "_context": Object {},
                "_element": <SpeedGrader
                  assignmentID="1"
                  assignmentSubmissionTypes={
                              Array [
                                          "none",
                                        ]
                  }
                  courseID="1"
                  drawerPosition={0}
                  getCourseEnabledFeatures={[Function]}
                  gradeSubmissionWithRubric={[Function]}
                  navigator={
                              Object {
                                          "dismiss": [Function],
                                          "dismissAllModals": [Function],
                                          "isModal": false,
                                          "pop": [Function],
                                          "show": [Function],
                                          "traitCollection": [Function],
                                        }
                  }
                  onDismiss={[Function]}
                  pending={false}
                  refresh={[Function]}
                  refreshSubmissionSummary={[Function]}
                  refreshSubmissions={[Function]}
                  refreshing={false}
                  resetDrawer={[Function]}
                  submissionEntities={Object {}}
                  submissions={
                              Array [
                                          Object {
                                            "avatarURL": "http://www.fillmurray.com/100/100",
                                            "grade": "B-",
                                            "name": "Donald Trump",
                                            "sectionID": "1",
                                            "status": "submitted",
                                            "userID": "55",
                                          },
                                        ]
                  }
                  userID="1"
      />,
                "_forcedUpdate": false,
                "_instance": [Circular],
                "_newState": Object {
                  "currentPageIndex": 0,
                  "currentStudentID": "1",
                  "drawerInset": 62,
                  "hasScrolledToInitialSubmission": false,
                  "hasSetInitialDrawerPosition": false,
                  "scrollEnabled": true,
                  "size": Object {
                    "height": 1334,
                    "width": 770,
                  },
                  "submissions": Array [
                    Object {
                      "avatarURL": "http://www.fillmurray.com/100/100",
                      "grade": "B-",
                      "name": "Donald Trump",
                      "sectionID": "1",
                      "status": "submitted",
                      "userID": "55",
                    },
                  ],
                },
                "_rendered": <Screen
                  navBarHidden={true}
                  navBarStyle="light"
                  noRotationInVerticallyCompact={true}
                  showDismissButton={true}
                  statusBarHidden={true}
                  statusBarStyle="default"
      >
                  <View
                              style={
                                          Object {
                                                      "flex": 1,
                                                    }
                              }
                  >
                              <FlatList
                                          data={
                                                      Array [
                                                                  Object {
                                                                    "key": "55",
                                                                    "submission": Object {
                                                                      "avatarURL": "http://www.fillmurray.com/100/100",
                                                                      "grade": "B-",
                                                                      "name": "Donald Trump",
                                                                      "sectionID": "1",
                                                                      "status": "submitted",
                                                                      "userID": "55",
                                                                    },
                                                                  },
                                                                ]
                                          }
                                          disableVirtualization={false}
                                          getItemLayout={[Function]}
                                          horizontal={true}
                                          initialNumToRender={null}
                                          initialScrollIndex={0}
                                          keyExtractor={[Function]}
                                          keyboardShouldPersistTaps="handled"
                                          maxToRenderPerBatch={10}
                                          numColumns={1}
                                          onEndReachedThreshold={2}
                                          onLayout={[Function]}
                                          onMomentumScrollEnd={[Function]}
                                          pagingEnabled={true}
                                          renderItem={[Function]}
                                          scrollEventThrottle={50}
                                          showsHorizontalScrollIndicator={false}
                                          style={
                                                      Object {
                                                                  "marginLeft": -10,
                                                                  "marginRight": -10,
                                                                }
                                          }
                                          updateCellsBatchingPeriod={50}
                                          windowSize={5}
                              />
                              <Tutorial
                                          tutorials={
                                                      Array [
                                                                  Object {
                                                                    "id": "swipe-tutorial",
                                                                    "image": Object {
                                                                      "testUri": "../../../src/images/speedgrader/Swipe.png",
                                                                    },
                                                                    "text": "Swipe left or right to view other student submissions",
                                                                  },
                                                                ]
                                          }
                              />
                  </View>
      </Screen>,
                "_rendering": false,
                "_updater": [Circular],
              },
            },
          },
        ],
        "registerCommentProgress": [Function],
        "snapTo": [Function],
        "unregisterCommentProgress": [Function],
      }
    }
    gradeSubmissionWithRubric={[Function]}
    isCurrentStudent={false}
    navigator={
      Object {
        "dismiss": [Function],
        "dismissAllModals": [Function],
        "isModal": false,
        "pop": [Function],
        "show": [Function],
        "traitCollection": [Function],
      }
    }
    selectedAttachmentIndex={null}
    selectedIndex={null}
    selectedTabIndex={-1}
    setScrollEnabled={[Function]}
    submissionProps={
      Object {
        "avatarURL": "http://www.fillmurray.com/100/100",
        "grade": "B-",
        "name": "Donald Trump",
        "sectionID": "1",
        "status": "submitted",
        "userID": "55",
      }
    }
    userID="55"
  />
</View>
`;
